--- a/model_for_Gender_prediction.ipynb
+++ b/model_for_Gender_prediction.ipynb
@@ -61,7 +61,7 @@
         "from keras.layers import Activation, Dropout, Flatten, Dense\n",
         "from keras.utils.np_utils import to_categorical\n",
         "\n",
-        "os.chdir('/gdrive/My Drive/Determination_of_age_using_dental_xray/Dental xray')"
+        "os.chdir('/gdrive/.../Dental xray')"
       ],
       "execution_count": 0,
       "outputs": []
